feat: add catalog carousel
